	FIXED - SPLITPOS was ignored with VIASTYLE angled (thanks to uhtred)
	FIXED - 'AICONOUTLINECOLOR none' is actually valid now (thanks to mgb & Leathon)
        FIXED - readdir() loop never stops, on some systems (thanks to jerebernard)
        FIXED - bad regexp in the MRTG DS plugin (thanks to Matt McMahon)
        FIXED - 0.96 had a new 'time' DS plugin - now documented!
        ADDED - USEICONSCALE no longer has special dependencies - and the colours are nicer too.
	ADDED - Option of a dropdown selector to navigate between maps (in full-size view)
	ADDED - Maps can be organised into groups in Cacti plugin. These appear
			as tabs in the UI for viewing maps.
	ADDED - Extra variables can be defined per-group, so all maps in a group can have similar settings (e.g. a "24hr average" tab).
	ADDED - INCLUDE keyword to include a file of common definitions (based on work by BorisL)
			(NOTE: this can confuse the editor sometimes - see the manual page for INCLUDE)
	ADDED - Warning for maps that contain OVERLIBGRAPH but not 'HTMLSTYLE overlib'
	ADDED - Warning for use of TEMPLATE not as the first line of an object (overwrites settings otherwise)
	ADDED - SCALE will accept values below 0, and also above 100
	ADDED - USESCALE has two new options: absolute and percent, which allows you to have a SCALE of absolute values
	ADDED - New datasource plugin to support statistics from TheWitness's DSStats Cacti Plugin. This gets you daily,weekly,monthly and annual stats with no complicated rrdtool stuff.
	ADDED - New converter to take a rrdtool-based map config and make it into a DSStats-based one
	ADDED - static datasource can be used for negative values
	ADDED - SNMP datasource has configurable timeout and retry values.
	ADDED - SNMP datasource has option to give up on a failing host
        ADDED - LABELOFFSET supports percentage compass offsets and radial offsets, like NODES does.
        ADDED - Percentage compass offsets (NODES and LABELOFFSET) support > 100% offsets
	